--- a/index.html
+++ b/index.html
@@ -10,12 +10,16 @@
 
     <div class="container">
         <div class="destination-container">
-            <div class="destination" id="belize">
+            <div class="destination" id="Madrid">
                 <h2>Madrid</h2>
             </div>
 
             <div class="destination" id="barcelona">
                 <h2>Barcelona</h2>
+            </div>
+
+			<div class="destination" id="London">
+                <h2>London</h2>
             </div>
         </div>
     </div>
