--- a/index.html
+++ b/index.html
@@ -18,8 +18,8 @@
                 <h2>Barcelona</h2>
             </div>
 
-			<div class="destination" id="London">
-                <h2>London</h2>
+			<div class="destination" id="New York">
+                <h2>New York</h2>
             </div>
         </div>
     </div>
